suppot-section-complete

--- a/index.html
+++ b/index.html
@@ -8,9 +8,43 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
-    <section>
-
+<body class="inter-family">
+    <section class=" bg-[#F5F5F5] py-[151px]">
+        <div class="container mx-auto">
+            <h2 class="max-w-[880px] font-extrabold text-[67px] leading-[77px] text-center mx-auto m-0 pb-4">We didn’t
+                reinvent
+                the wheel. Just web
+                support</h2>
+            <p class="mx-w-[668px] font-medium text-[26px] leading-[100%] text-center m-0">Expert Website Scaling,
+                Maintenance, & AI Integration </p>
+            <div class="flex flex-wrap flex-row mx-[-12px] mt-[70px]">
+                <div class="w-1/3 px-[12px]">
+                    <div class="flex flex-col items-center justify-center w-full">
+                        <img class="mb-[41px]" src="./assets/image/svg/verify-circle.svg" alt="verify-circle">
+                        <p class="font-medium text-[22px] leading-[100%] text-center max-w-[354px] tracking-[-1px] m-0">
+                            Subscribe for
+                            monthly proactive web maintenance</p>
+                    </div>
+                </div>
+                <div class="w-1/3 px-[12px]">
+                    <div class="flex flex-col items-center justify-center w-full">
+                        <img class="mb-[41px]" src="./assets/image/svg/recieve-svg.svg" alt="recieve-svg">
+                        <p class="font-medium text-[22px] leading-[32px] text-center max-w-[376px] tracking-[-1px] m-0">
+                            Receive web &
+                            e-commerce optimization, traffic scaling, security & server cost management</p>
+                    </div>
+                </div>
+                <div class="w-1/3 px-[12px]">
+                    <div class="flex flex-col items-center justify-center w-full">
+                        <img class="mb-[30px]" src="./assets/image/svg/tailor-svg.svg" alt="tailor-svg">
+                        <p class="font-medium text-[22px] leading-[32px] text-center max-w-[376px] m-0">
+                            We will tailor our services to maximize value and quality.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="px-[49px] py-[21px] font-semibold text-[20px] border border-black rounded-[14px] 
+            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See Plans</button>
+        </div>
     </section>
 </body>
 
