starting-money-talk

--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
                 </div>
             </div>
             <button class="px-[49px] py-[21px] font-semibold text-[20px] border border-black rounded-[14px] 
-            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See Plans</button>
+            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See
+                Plans</button>
         </div>
     </section>
+
+    <!--section-money-talk-->
+    
 </body>
 
 </html>
