--- a/index.html
+++ b/index.html
@@ -58,15 +58,20 @@
                     that Aaron and FloatingWorld Development are a First Class Operation. Candidly, I
                     would simply never consider switching my website development business anywhere else</p>
                 <div class="flex justify-center items-center mt-[73px] gap-[36px]">
-                    <p class="text-right max-w-[189px] font-bold text-[22px leading-[100%] justify-center flex items-center">Robert Zurrer <br
-                            class="font-medium">
+                    <p
+                        class="text-right max-w-[189px] font-bold text-[22px leading-[100%] justify-center flex items-center">
+                        Robert Zurrer <br class="font-medium">
                         Editor </p>
-                    <span class="w-0.5 h-[83px] max-md:h-0.5 max-md:w-full bg-[#D9D9D9] justify-center flex items-center"></span>
-                    <img class="justify-center flex items-center"" src="./assets/image/svg/money-talk-svg.svg" alt="">
+                    <span
+                        class="w-0.5 h-[83px] max-md:h-0.5 max-md:w-full bg-[#D9D9D9] justify-center flex items-center"></span>
+                    <img class="justify-center flex items-center"" src=" ./assets/image/svg/money-talk-svg.svg" alt="">
                 </div>
             </div>
         </div>
     </section>
+
+    <!--section-better-->
+    
 </body>
 
 </html>
