better-section-complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="inter-family">
-    <section class=" bg-[#F5F5F5] py-[151px]">
+    <section class="bg-[#F5F5F5] py-[151px]">
         <div class="container mx-auto">
             <h2 class="max-w-[880px] font-extrabold text-[67px] leading-[77px] text-center mx-auto m-0 pb-4">We didn’t
                 reinvent
@@ -71,7 +71,21 @@
     </section>
 
     <!--section-better-->
-    
+    <section class="bg-[#F5F5F5] min-h-screen pt-[110px]">
+        <div class="container mx-auto">
+            <div>
+                <h2 class="font-extrabold text-[67px] leading-[73px] max-w-[614px] text-center mx-auto ">It’s “you’ll
+                    never go back” better</h2>
+                <p
+                    class="font-medium text-[26px] leading-[36px] max-w-[732px] text-center mx-auto tracking-[1px] m-0 pt-[33px]">
+                    Floatingworld replaces unreliable freelancers and expensive agencies for one flat monthly fee, with
+                    unwavering (fanatical?) support that will blow your mind.</p>
+                <button class="px-[53px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See
+                    Plans</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
