--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
@@ -71,7 +72,7 @@
     </section>
 
     <!--section-better-->
-    <section class="bg-[#F5F5F5] min-h-screen pt-[110px]">
+    <section class="bg-[#F5F5F5] pt-[110px] pb-[119px]">
         <div class="container mx-auto">
             <div>
                 <h2 class="font-extrabold text-[67px] leading-[73px] max-w-[614px] text-center mx-auto ">It’s “you’ll
@@ -81,8 +82,44 @@
                     Floatingworld replaces unreliable freelancers and expensive agencies for one flat monthly fee, with
                     unwavering (fanatical?) support that will blow your mind.</p>
                 <button class="px-[53px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
-                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See
+                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[72px]">See
                     Plans</button>
+            </div>
+        </div>
+    </section>
+
+    <!--section-6-->
+    <section class="pt-[133px] pb-[138px]">
+        <div class="container mx-auto">
+            <div class="flex flex-wrap mx-[-12px]">
+                <div class="w-1/2">
+                    <div class="max-w-[602px] w-full shadow-lg rounded-[24px]">
+                        <p
+                            class="max-w-[510px] font-medium text-[26px] leading-[36px] tracking-[1px] pt-[67px] pl-[58px]">
+                            “Floating World has become a key partner in the development and expansion of Michael
+                            Campbell's MoneyTalks”</p>
+                        <div>
+                            <img class="w-full max-w-[285px]" src="./assets/image/png/section-6-img.png"
+                                alt="section-6-img">
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/2">
+                    <div class="mt-[41px]">
+                        <p class="font-bold text-[26px] leading-[100%] m-0">Stress-free web support</p>
+                        <p class="font-normal text-[22px] leading-[34px] max-w-[569px] tracking-[1px] pt-[16px]">We take
+                            responsibility for the monitoring and maintenance of your website so you can focus on
+                            what you do best: Serving your customers</p>
+                        <p class="font-bold text-[26px] leading-[100%] m-0 pt-[43px]">Safe & Secure</p>
+                        <p class="font-normal text-[22px] leading-[34px] max-w-[569px] tracking-[0] pt-[16px]">We
+                            implement regular backups, security protocols & patches, and continuous monitoring to
+                            safeguard your data​​ and to keep you and your customers safe.</p>
+                        <p class="font-bold text-[26px] leading-[100%] m-0 pt-[43px]">Technical & Strategic Guidance</p>
+                        <p class="font-normal text-[22px] leading-[34px] max-w-[569px] tracking-[0] pt-[16px]">We can
+                            offer strategic advice based on decades of experience to steer your web business in the
+                            right direction</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
