starting-section-membership

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <!--section-money-talk-->
+    <!--Section-money-talk-->
     <section class="pb-[101px]">
         <div class="container mx-auto">
             <div>
@@ -71,7 +71,7 @@
         </div>
     </section>
 
-    <!--section-better-->
+    <!--Section-better-->
     <section class="bg-[#F5F5F5] pt-[110px] pb-[119px]">
         <div class="container mx-auto">
             <div>
@@ -88,7 +88,7 @@
         </div>
     </section>
 
-    <!--section-6-->
+    <!--Section-6-->
     <section class="pt-[133px] pb-[138px]">
         <div class="container mx-auto">
             <div class="flex flex-wrap mx-[-12px]">
@@ -123,6 +123,8 @@
             </div>
         </div>
     </section>
+
+    <!--Section-Membership-->
 </body>
 
 </html>
