Membership-section-complete

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                             class="max-w-[510px] font-medium text-[26px] leading-[36px] tracking-[1px] pt-[67px] pl-[58px]">
                             “Floating World has become a key partner in the development and expansion of Michael
                             Campbell's MoneyTalks”</p>
-                        <div>
+                        <div class="flex justify-between items-end pl-[58px] pb-[67px] pr-[39px] mt-[62px]">
+                            <p class="">Grant Longhurst <br>
+                                HighPCI.com</p>
                             <img class="w-full max-w-[285px]" src="./assets/image/png/section-6-img.png"
                                 alt="section-6-img">
                         </div>
@@ -125,6 +127,73 @@
     </section>
 
     <!--Section-Membership-->
+    <section class="bg-[#F5F5F5] pt-[131px] pb-[123px]">
+        <div class="container mx-auto">
+            <h2 class="font-extrabold text-[67px] leading-[82px] text-center pb-[82px]">Membership Benefits</h2>
+            <div class="flex flex-wrap mx-[-12px]">
+                <div class="w-1/3">
+                    <div>
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-fogot-svg.svg"
+                            alt="Membership-fogot-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[50px]">Set it and forget it
+                        </p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[308px] m-0 text-center mx-auto pt-[17px]">
+                            We pay fanatical attention to your website so you don't have to.</p>
+                    </div>
+                    <div class="mt-[131px]">
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-flexible.svg"
+                            alt="Membership-fogot-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[50px]">Flexible and Scalable
+                        </p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[344px] m-0 text-center mx-auto pt-[17px]">
+                            We ensure the smooth growth of your subscription based business by making sure you are using
+                            the best framework for your needs</p>
+                    </div>
+                </div>
+                <div class="w-1/3">
+                    <div>
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-coverge-svg.svg"
+                            alt="Membership-coverge-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[35px]">Full coverage</p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[320px] m-0 text-center mx-auto pt-[17px]">
+                            We take care of it all: website & server updates, security, traffic spikes, & e-commerce
+                            optimization.</p>
+                    </div>
+                    <div class="mt-[86px]">
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-AI.svg"
+                            alt="Membership-coverge-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[35px]">Harness the Power of
+                            AI</p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[384px] m-0 text-center mx-auto pt-[17px]">
+                            Stay ahead of the competition by integrating AI into your business operations.</p>
+                    </div>
+                </div>
+                <div class="w-1/3">
+                    <div>
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-monthly.svg"
+                            alt="Membership-coverge-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[33px]">Fixed monthly rate</p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[320px] m-0 text-center mx-auto pt-[17px]">
+                            No surprises here! We enable you take control of your annual web budget with a fixed monthly
+                            retainer.</p>
+                    </div>
+                    <div class="mt-[99px]">
+                        <img class="flex mx-auto" src="./assets/image/svg/Membership-wordpress.svg"
+                            alt="Membership-coverge-svg">
+                        <p class="font-bold text-[26px] leading-[100%] m-0 text-center pt-[33px]">Wordpress experts</p>
+                        <p
+                            class="font-medium text-[18px] leading-[26px] max-w-[342px] m-0 text-center mx-auto pt-[17px]">
+                            Wordpress Experts: We have decades of experience coding with Wordpress. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
