starting-section-app-ai-web

--- a/index.html
+++ b/index.html
@@ -194,6 +194,53 @@
             </div>
         </div>
     </section>
+
+    <!--Section-app-web-ai-->
+    <section class="min-h-screen pt-[212px]">
+        <div class="container mx-auto">
+            <h2 class="font-bold text-[67px] leading-[82px] text-center">App, web, & AI coding</h2>
+            <div class="flex flex-wrap gap-[12px] justify-center mt-[63px]">
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Mobile Apps</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    AI</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Plugin Coding</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Web Coding</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Server-side</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Security</div>
+            </div>
+            <div class="flex flex-wrap gap-[12px] justify-center mt-[22px]">
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Backups</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Management</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Wordpress</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Laravel</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Integrations</div>
+                <div
+                    class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
+                    Speed Optimization</div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
