--- a/index.html
+++ b/index.html
@@ -239,6 +239,119 @@
                     class="rounded-[62px] bg-[#00AFE1] text-white px-[30px] py-[14.5px] font-semibold text-[16px] leading-[100%]">
                     Speed Optimization</div>
             </div>
+            <div class="flex flex-wrap mx-[-12px] mt-[100px]">
+                <div class="w-1/3 px-[12px]">
+                    <div class="relative cursor-pointer group overflow-hidden">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-1.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-4.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-7.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 px-[12px]">
+                    <div class="relative cursor-pointer group overflow-hidden">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-2.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-5.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-8.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/3 px-[12px]">
+                    <div class="relative cursor-pointer group overflow-hidden">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-3.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-6.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                    <div class="relative cursor-pointer group overflow-hidden mt-[33px]">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-9.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-wrap mx-[-12px] mt-[33px]">
+                <div class="w-1/2 px-[12px] justify-end items-end flex">
+                    <div class="relative cursor-pointer group overflow-hidden">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-10.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/2 px-[12px]">
+                    <div class="relative cursor-pointer group overflow-hidden">
+                        <img class="w-full max-w-[476px] rounded-[24px]" src="./assets/image/png/AI-image-11.png"
+                            alt="AI">
+                        <div
+                            class="max-w-[476px] w-full rounded-b-[24px] bg-[#00000080] pl-[36px] py-[18px] md:pt-[24px] md:pb-[35px] absolute -bottom-1/2 group-hover:bottom-0 duration-300 ease-linear">
+                            <p class="font-bold text-[22px] leading-[100%] text-white m-0">Project Name</p>
+                            <p class="font-medium text-[18px] leading-[100%] text-white pt-[6px]">Launch Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
