starting-join-world-section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </section>
 
     <!--Section-app-web-ai-->
-    <section class="min-h-screen pt-[212px]">
+    <section class="min-h-screen pt-[212px] pb-[129px]">
         <div class="container mx-auto">
             <h2 class="font-bold text-[67px] leading-[82px] text-center">App, web, & AI coding</h2>
             <div class="flex flex-wrap gap-[12px] justify-center mt-[63px]">
@@ -352,7 +352,47 @@
                     </div>
                 </div>
             </div>
+            <button
+                class="px-[46.5px] py-[23px] font-semibold text-[20px] leading-[100%] border border-black rounded-[14px] bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto flex mt-[77px]">Download
+                Case Studies</button>
         </div>
+    </section>
+
+    <!--Section-join-world-->
+    <section class="bg-[#F5F5F5] min-h-screen pt-[261px] ">
+        <div class="container mx-auto">
+            <div class="flex">
+                <div class="bg-[#222222] max-w-[476px] w-full h-[800px] rounded-[24px] pl-[42px] pt-[65px]">
+                    <div
+                        class="max-w-[181px] rounded-[50px] bg-white h-[48px] justify-center items-center flex gap-[11px]">
+                        <div class="bg-[#00AFE1] w-[14px] h-[14px] rounded-full "></div>
+                        <p class="m-0 font-semibold text-[16px] leading-[100%]">Slots available</p>
+
+                    </div>
+                    <p class="max-w-[320px] text-white font-bold text-[67px] leading-[72px] m-0 pt-[27px]">Join
+                        Floating World</p>
+                    <div
+                        class="flex justify-between bg-black max-w-[394px] pt-[20px] px-[26px] rounded-[13px] pb-[29px] mt-[109px]">
+                        <div>
+                            <p class="m-0 font-extrabold text-[22px] leading-[100%] text-white">Book a 15 min intro
+                                call</p>
+                            <p class="m-0 font-medium text-[18px] leading-[26px] text-white max-w-[294px] pt-[9px]">
+                                Learn how Floatingworld works and how it can help you</p>
+                        </div>
+                        <img src="./assets/image/svg/blue-arrow-svg.svg" alt="blue-arrow-svg">
+                    </div>
+                    <div
+                        class="flex justify-between bg-black max-w-[394px] pt-[20px] px-[26px] rounded-[13px] pb-[29px] mt-[21px]">
+                        <div>
+                            <p class="m-0 font-extrabold text-[22px] leading-[100%] text-white">Refer a friend & earn
+                            </p>
+                            <p class="m-0 font-medium text-[18px] leading-[26px] text-white max-w-[316px] pt-[9px]">
+                                Earn 5% monthly recurring commissions for each referral.</p>
+                        </div>
+                        <img src="./assets/image/svg/blue-arrow-svg.svg" alt="blue-arrow-svg">
+                    </div>
+                </div>
+            </div>
     </section>
 </body>
 
