section-join-wolrd-complete

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
     <!--Section-join-world-->
     <section class="bg-[#F5F5F5] min-h-screen pt-[261px] ">
         <div class="container mx-auto">
-            <div class="flex">
-                <div class="bg-[#222222] max-w-[476px] w-full h-[800px] rounded-[24px] pl-[42px] pt-[65px]">
+            <div class="flex gap-[32px]">
+                <div class="bg-[#222222] max-w-[476px] w-full pb-[59px] rounded-[24px] pl-[42px] pt-[65px]">
                     <div
                         class="max-w-[181px] rounded-[50px] bg-white h-[48px] justify-center items-center flex gap-[11px]">
                         <div class="bg-[#00AFE1] w-[14px] h-[14px] rounded-full "></div>
@@ -391,6 +391,35 @@
                         </div>
                         <img src="./assets/image/svg/blue-arrow-svg.svg" alt="blue-arrow-svg">
                     </div>
+                </div>
+                <div class="max-w-[981px] w-full rounded-[24px] pl-[54px] pt-[49px] pb-[61px] h-[800px] bg-white">
+                    <p class="m-0 font-bold text-[51px] leading-[100%] ">Memberships</p>
+                    <p class="m-0 font-bold text-[48px] leading-[82px] pt-[23px]">$600/m</p>
+                    <p class="m-0 font-medium text-[18px] leading-[100%]">Pause or cancel anytime</p>
+                    <div class="max-w-[800px] w-full h-[1px] bg-[#000000] mt-[36px]"></div>
+                    <p class="m-0 font-semibold text-[22px] leading-[100%] pb-[21px] pt-[38px]">Whats included</p>
+                    <div class="flex gap-[67px]">
+                        <ul class="list-disc ml-[18px]">
+                            <li class="font-medium text-[18px] leading-[38px]">Managing 3 content uploads</li>
+                            <li class="font-medium text-[18px] leading-[38px]">Maintaining smooth third-party
+                                integration
+                            </li>
+                            <li class="font-medium text-[18px] leading-[38px]">Maintaining & updating website plugins
+                            </li>
+                            <li class="font-medium text-[18px] leading-[38px]">Updating PHP, server, and software</li>
+                            <li class="font-medium text-[18px] leading-[38px]">Keeping software up to date</li>
+                        </ul>
+                        <ul class="list-disc">
+                            <li class="font-medium text-[18px] leading-[38px]">Hosting and server management</li>
+                            <li class="font-medium text-[18px] leading-[38px]">Server Security</li>
+                            <li class="font-medium text-[18px] leading-[38px]">Uptime monitoring </li>
+                            <li class="font-medium text-[18px] leading-[38px]">Backups</li>
+                            <li class="font-medium text-[18px] leading-[38px]">*Subject to details of intro call</li>
+                        </ul>
+                    </div>
+                    <button class="px-[86.5px] py-[29.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+                    bg-gradient-to-b from-[#000000] to-[#393939] text-white mt-[44px]">Book
+                        a call</button>
                 </div>
             </div>
     </section>
