--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     </section>
 
     <!--Section-join-world-->
-    <section class="bg-[#F5F5F5] min-h-screen pt-[261px] ">
+    <section class="bg-[#F5F5F5] pt-[261px] pb-[189px]">
         <div class="container mx-auto">
             <div class="flex gap-[32px]">
                 <div class="bg-[#222222] max-w-[476px] w-full pb-[59px] rounded-[24px] pl-[42px] pt-[65px]">
@@ -423,6 +423,166 @@
                 </div>
             </div>
     </section>
+
+    <!--Section-asked-question-->
+    <section class="bg-[#F5F5F5] min-h-screen">
+        <div class="container mx-auto ">
+            <h2 class="font-bold text-[67px] leading-[82px] max-w-[625px]">Commonly asked questions</h2>
+            <div class="flex flex-wrap mx-[-12px]">
+                <div class="w-1/2 px-[12px]">
+                    <div>
+                        <div>
+                            <button onclick="toggleAccordion(1)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-1" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-1" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 2 -->
+                        <div>
+                            <button onclick="toggleAccordion(2)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-2" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-2" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 3 -->
+                        <div>
+                            <button onclick="toggleAccordion(3)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-3" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-3" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 4 -->
+                        <div>
+                            <button onclick="toggleAccordion(4)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-4" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-4" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 5 -->
+                        <div>
+                            <button onclick="toggleAccordion(5)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-5" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-5" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 6 -->
+                        <div>
+                            <button onclick="toggleAccordion(6)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-6" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-6" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 7 -->
+                        <div>
+                            <button onclick="toggleAccordion(7)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-7" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-7" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Accordion Item 8 -->
+                        <div>
+                            <button onclick="toggleAccordion(8)"
+                                class="w-full flex justify-between items-center py-5 text-slate-800">
+                                <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
+                                    consectetur
+                                    adipiscing elit?</span>
+                                <span id="icon-8" class="text-slate-800 transition-transform duration-300">
+                                    <img src="./assets/image/svg/accordion-svg.svg" alt="accordion-svg">
+                                </span>
+                            </button>
+                            <div id="content-8" class="max-h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                                <div class="pb-5 text-[16px] font-normal leading-[100%] text-slate-500">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/2 px-[12px]">
+                    <div class="max-w-[726px] w-full h-[800px] rounded-[24px] bg-white shadow-sm">
+
+                    </div>
+                </div>
+            </div>
+    </section>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
