--- a/index.html
+++ b/index.html
@@ -427,11 +427,12 @@
     <!--Section-asked-question-->
     <section class="bg-[#F5F5F5] min-h-screen">
         <div class="container mx-auto ">
-            <h2 class="font-bold text-[67px] leading-[82px] max-w-[625px]">Commonly asked questions</h2>
             <div class="flex flex-wrap mx-[-12px]">
                 <div class="w-1/2 px-[12px]">
                     <div>
-                        <div>
+                        <h2 class="font-bold text-[67px] leading-[82px] max-w-[625px] pb-[47px]">Commonly asked questions</h2>
+
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(1)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -449,7 +450,7 @@
                         </div>
 
                         <!-- Accordion Item 2 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(2)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -467,7 +468,7 @@
                         </div>
 
                         <!-- Accordion Item 3 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(3)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -485,7 +486,7 @@
                         </div>
 
                         <!-- Accordion Item 4 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(4)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -503,7 +504,7 @@
                         </div>
 
                         <!-- Accordion Item 5 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(5)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -521,7 +522,7 @@
                         </div>
 
                         <!-- Accordion Item 6 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(6)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -539,7 +540,7 @@
                         </div>
 
                         <!-- Accordion Item 7 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(7)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -557,7 +558,7 @@
                         </div>
 
                         <!-- Accordion Item 8 -->
-                        <div>
+                        <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(8)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
                                 <span class="font-medium text-[18px] leading-[100%]">Lorem ipsum dolor sit amet,
@@ -575,9 +576,24 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-1/2 px-[12px]">
-                    <div class="max-w-[726px] w-full h-[800px] rounded-[24px] bg-white shadow-sm">
-
+                <div class="w-1/2 px-[12px] justify-end flex">
+                    <div
+                        class="max-w-[726px] w-full rounded-[24px] py-[93px] bg-white shadow-sm justify-center flex items-center">
+                        <div>
+                            <img class="flex mx-auto" src="./assets/image/svg/question-blue-smile-svg.svg"
+                                alt="question-blue-smile-svg">
+                            <p
+                                class="max-w-[450px] font-bold text-[48px] leading-[58px] m-0 text-center mx-auto mt-[37px]">
+                                Book a 15-minute intro call
+                            </p>
+                            <button
+                                class="px-[55.2px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+                            bg-gradient-to-b from-[#000000] to-[#393939] text-white mt-[28px] mx-auto flex mb-[61px]">Schedule
+                                Now</button>
+                            <a href="mailto:hello@floatingworld.ca"
+                                class="font-medium text-[22px] leading-[44px]">Prefer to email?<span
+                                    class="text-[#02AFE0] font-bold"> hello@floatingworld.ca</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
