--- a/index.html
+++ b/index.html
@@ -425,12 +425,13 @@
     </section>
 
     <!--Section-asked-question-->
-    <section class="bg-[#F5F5F5] min-h-screen">
+    <section class="bg-[#F5F5F5]">
         <div class="container mx-auto ">
             <div class="flex flex-wrap mx-[-12px]">
                 <div class="w-1/2 px-[12px]">
                     <div>
-                        <h2 class="font-bold text-[67px] leading-[82px] max-w-[625px] pb-[47px]">Commonly asked questions</h2>
+                        <h2 class="font-bold text-[67px] leading-[82px] max-w-[625px] pb-[47px]">Commonly asked
+                            questions</h2>
 
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(1)"
@@ -598,6 +599,32 @@
                 </div>
             </div>
     </section>
+
+    <!--footer-->
+    <footer class="bg-[#F5F5F5] py-[250px]">
+        <div class="container mx-auto">
+            <div>
+                <p class="font-bold text-[103px] leading-[82px] flex mx-auto justify-center">Floatingworld Inc.™</p>
+                <ul class="flex gap-[63px] justify-center items-center mt-[83px]">
+                    <li>
+                        <a href="#">How it works</a>
+                    </li>
+                    <li>
+                        <a href="#">Benefits</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#">FAQs</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="./assets/js/app.js"></script>
 </body>
 
