--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body class="inter-family">
+    <header class="min-h-screen bg-[#00AFE1]">
+        <div class="container">
+            <div>
+                <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale & grow with ease</p>
+            </div>
+        </div>
+    </header>
+
+    <!--Section-support-->
     <section class="bg-[#F5F5F5] py-[151px]">
         <div class="container mx-auto">
             <h2 class="max-w-[880px] font-extrabold text-[67px] leading-[77px] text-center mx-auto m-0 pb-4">We didn’t
