--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header class="min-h-screen bg-[#00AFE1]">
         <div class="container">
             <div>
-                <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale & grow with ease</p>
+                <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale &
+                    grow with ease</p>
+                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px]">Monthly web maintenance packages for businesses. Cancel anytime</p>
             </div>
         </div>
     </header>
