adding-header-left-layers

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 </head>
 
 <body class="inter-family">
-    <header class="min-h-screen bg-[#00AFE1]">
-        <div class="container">
+    <header class="bg-[#00AFE1] pt-[134px] pb-[117px]">
+        <div class="container mx-auto">
             <div>
                 <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale &
                     grow with ease</p>
-                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px]">Monthly web maintenance packages for businesses. Cancel anytime</p>
+                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px]">Monthly web
+                    maintenance packages for businesses. Cancel anytime</p>
+                <button class="px-[49px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
+            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[40px]">See
+                    Plans</button>
+                <div class="flex gap-[13px] justify-center mt-[21px]">
+                    <div class="h-[12px] w-[12px] rounded-full bg-[#FF0000]"></div>
+                    <p class="font-medium text-[12px] leading-[100%] text-white ">Available now</p>
+                </div>
             </div>
         </div>
     </header>
