--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 </head>
 
 <body class="inter-family">
-    <header class="bg-[#00AFE1] pt-[134px] pb-[117px]">
-        <div class="container mx-auto">
+    <header class="bg-[#00AFE1] min-h-screen relative">
+        <nav class="w-full py-[20px] bg-white items-center flex justify-center">
+            <img src="./assets/image/svg/nav-logo.svg" alt="nav-logo">
+            <p class="font-bold text-[22px] leading-[100%]">Floating World</p>
+        </nav>
+        <img class="w-full max-w-[289px] absolute left-0 bottom-[10%]" src="./assets/image/png/header-left-layer.png"
+            alt="header-left-layer">
+        <img class="w-full max-w-[170px] absolute left-[120px] bottom-[47%]"
+            src="./assets/image/png/haeder-left-circle.png" alt="haeder-left-circle">
+        <div class="container mx-auto mt-[134px]">
             <div>
                 <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale &
                     grow with ease</p>
@@ -26,6 +34,8 @@
                 </div>
             </div>
         </div>
+        <img class="absolute right-0 bottom-[10%] max-w-[442px] w-full" src="./assets/image/png/header-right-layer.png"
+            alt="header-right-layer">
     </header>
 
     <!--Section-support-->
