starting-slider-secton

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="inter-family">
+    <!--Header-->
     <header class="bg-[#00AFE1] min-h-screen relative">
         <nav class="w-full py-[20px] bg-white items-center flex justify-center">
             <img src="./assets/image/svg/nav-logo.svg" alt="nav-logo">
@@ -38,6 +39,10 @@
             alt="header-right-layer">
     </header>
 
+    <!--Section-slider-->
+    <section>
+        
+    </section>
     <!--Section-support-->
     <section class="bg-[#F5F5F5] py-[151px]">
         <div class="container mx-auto">
