slider-section-complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+        integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="inter-family">
@@ -40,8 +46,58 @@
     </header>
 
     <!--Section-slider-->
-    <section>
-        
+    <section class="min-h-screen overflow-hidden">
+        <div class="slider my-[19px] ">
+            <div>
+                <div class="max-w-[249px] w-full items-center flex justify-center relative">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute left-0"></div>
+
+                    <img src="./assets/image/svg/slider-img-1.svg" alt="slider-img-1">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[194px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-2.svg" alt="slider-img-2">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[286px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-3.svg" alt="slider-img-3">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[243px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-4.svg" alt="slider-img-4">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[249px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-5.svg" alt="slider-img-5">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[236px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-6.svg" alt="slider-img-6">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[249px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-7.svg" alt="slider-img-7">
+                    <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
+                </div>
+            </div>
+            <div>
+                <div class="max-w-[249px] w-full items-center flex justify-center relative">
+                    <img src="./assets/image/svg/slider-img-8.svg" alt="slider-img-8">
+                </div>
+            </div>
+        </div>
     </section>
     <!--Section-support-->
     <section class="bg-[#F5F5F5] py-[151px]">
@@ -659,6 +715,13 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/app.js"></script>
 </body>
 
