--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <!--Section-slider-->
-    <!-- <section class="bg-[#F5F5F5] overflow-hidden">
+    <section class="bg-[#F5F5F5] overflow-hidden">
         <div class="slider my-[19px] ">
             <div>
                 <div class="max-w-[249px] w-full items-center flex justify-center relative">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!--Section-support-->
     <!-- <section class="bg-[#F5F5F5] py-[151px]">
         <div class="container mx-auto">
